--- a/EthernetToCan.vcxproj
+++ b/EthernetToCan.vcxproj
@@ -47,8 +47,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\arduino-1.6.9\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\libraries;C:\Users\Manuel.Rixen\Documents\Arduino\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\variants\eightanaloginputs;C:\Users\Manuel.Rixen\Documents\GitHub\EthernetToCan;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\variants\eightanaloginputs;C:\Program Files (x86)\arduino-1.6.9\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\libraries;C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\lpupndyf.dnk\Micro Platforms\default\debuggers;C:\Users\Manuel.Rixen\Documents\Arduino\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr/avr/include/;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>C:\Users\Manuel.Rixen\Documents\Arduino\EthernetToCan\__vm\.EthernetToCan.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\libraries\SPI\src;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\libraries\SPI\src\utility;C:\Program Files (x86)\arduino-1.6.9\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\libraries;C:\Users\Manuel.Rixen\Documents\Arduino\libraries;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\arduino-1.6.9\hardware\arduino\avr\variants\eightanaloginputs;C:\Users\Manuel.Rixen\Documents\GitHub\EthernetToCan;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr/avr/include/;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\arduino-1.6.9\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>C:\Users\Manuel.Rixen\Documents\GitHub\EthernetToCan\__vm\.EthernetToCan.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;F_CPU=16000000L;ARDUINO=10609;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -74,12 +74,17 @@
     <ProjectCapability Include="VisualMicro" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ENC28J60.ino" />
     <None Include="EthernetToCan.ino">
       <FileType>CppCode</FileType>
     </None>
+    <None Include="Mcp2515.ino" />
+    <None Include="SpiCommunication.ino" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Definitions.h" />
     <ClInclude Include="ENC28J60.h" />
+    <ClInclude Include="MCP2515.h" />
     <ClInclude Include="__vm\.EthernetToCan.vsarduino.h" />
   </ItemGroup>
   <PropertyGroup>
